--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,16 @@ services:
       DB_PASSWORD: admin
       REDIS_HOST: redis
 
+  frontend:
+    build:
+      context: ./frontend
+    container_name: github-user-info-app-frontend
+    ports:
+      - "4200:4200"
+    volumes:
+      - ./frontend:/app
+    command: npm start
+
   postgres:
     image: postgres:13
     container_name: github-user-info-app-postgres
