<chore> instalando o tailwindcss, criando serviço de busca de usuario e componentes

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,13 @@
-# Usa imagem Node.js slim
-FROM node:20-slim
+FROM node:20-alpine
 
-# Instala dependências do sistema para o Angular CLI (git, python, build-essential)
-RUN apt-get update && apt-get install -y git python3 build-essential && apt-get clean
+RUN npm install -g @angular/cli@17
 
-# Instala Angular CLI globalmente
-RUN npm install -g @angular/cli@latest
-
-# Define diretório de trabalho dentro do container
 WORKDIR /app
 
-# Copia package.json e package-lock.json (se tiver)
-COPY package*.json ./
+COPY . .
 
-# Instala dependências (caso já tenha package.json)
-RUN npm install || echo "Sem package.json, pulando npm install"
+RUN npm install
 
-# Expõe a porta padrão do Angular
 EXPOSE 4200
 
-# Comando padrão para iniciar bash (para você entrar no container e criar projeto)
-CMD [ "bash" ]
+CMD ["npm", "start"]
