--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,3 +18,11 @@ RUN docker-php-ext-install pdo pdo_pgsql zip
 COPY --from=composer:2.6 /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www/html
+
+COPY . .
+
+RUN composer install
+
+EXPOSE 8000
+
+CMD php artisan serve --host=0.0.0.0 --port=8000
