--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,6 +14,9 @@ RUN apt-get update && apt-get install -y \
 # Instala extensões do PHP
 RUN docker-php-ext-install pdo pdo_pgsql zip
 
+# Instala o Redis
+RUN pecl install redis && docker-php-ext-enable redis
+
 # Instala o Composer
 COPY --from=composer:2.6 /usr/bin/composer /usr/bin/composer
 
